--- a/SampleApp/Views/FooView.xaml
+++ b/SampleApp/Views/FooView.xaml
@@ -7,7 +7,7 @@
              x:Class="SampleApp.Views.FooView">
   <ContentView.Content>
       <StackLayout>
-          <Label Text="Hello Xamarin.Forms!" />
+            <Label Text="Hello Xamarin.Forms!" TextColor="{StaticResource NavigationPrimary}" />
       </StackLayout>
   </ContentView.Content>
 </ContentView>
