--- a/SampleApp/Views/FooView.xaml
+++ b/SampleApp/Views/FooView.xaml
@@ -7,7 +7,7 @@
              x:Class="SampleApp.Views.FooView">
   <ContentView.Content>
       <StackLayout>
-            <Label Text="Hello This is Foo View!" TextColor="{StaticResource NavigationPrimary}" />
+            <Label x:Name="FooLabel" Text="Hello This is Foo View!" TextColor="{StaticResource NavigationPrimary}" />
       </StackLayout>
   </ContentView.Content>
 </ContentView>
